force-app/main/default/objects/Quote/fields/Addon_Product_Cyber__c.field-meta.xml
<CustomField>
    <fullName>Addon_Product_Cyber__c</fullName>
    <label>Addon Product - Cyber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>