force-app/main/default/objects/Quote/fields/Been_Bankrupt__c.field-meta.xml
<CustomField>
    <fullName>Been_Bankrupt__c</fullName>
    <label>Been Bankrupt</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>