force-app/main/default/objects/Quote/fields/Competitor_renewal_date__c.field-meta.xml
<CustomField>
    <fullName>Competitor_renewal_date__c</fullName>
    <label>Competitor renewal date</label>
    <type>Date</type>
</CustomField>