force-app/main/default/objects/Quote/fields/Cover_Level_PI__c.field-meta.xml
<CustomField>
    <fullName>Cover_Level_PI__c</fullName>
    <label>Cover Level (PI)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>