force-app/main/default/objects/Quote/fields/Cover_Level_PL__c.field-meta.xml
<CustomField>
    <fullName>Cover_Level_PL__c</fullName>
    <label>Cover Level (PL)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>