force-app/main/default/objects/Quote/fields/Critical_Rail_Work__c.field-meta.xml
<CustomField>
    <fullName>Critical_Rail_Work__c</fullName>
    <label>Critical Rail Work</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>