force-app/main/default/objects/Quote/fields/Currently_Practicing__c.field-meta.xml
<CustomField>
    <fullName>Currently_Practicing__c</fullName>
    <label>Currently Practicing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>