force-app/main/default/objects/Quote/fields/Declined_Cover__c.field-meta.xml
<CustomField>
    <fullName>Declined_Cover__c</fullName>
    <label>Declined Cover</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>