force-app/main/default/objects/Quote/fields/Heat_Powerline_Work__c.field-meta.xml
<CustomField>
    <fullName>Heat_Powerline_Work__c</fullName>
    <label>Heat Powerline Work</label>
    <length>255</length>
    <type>Text</type>
</CustomField>