force-app/main/default/objects/Quote/fields/Industry_3__c.field-meta.xml
<CustomField>
    <fullName>Industry_3__c</fullName>
    <label>Industry 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>