force-app/main/default/objects/Quote/fields/Industry_5__c.field-meta.xml
<CustomField>
    <fullName>Industry_5__c</fullName>
    <label>Industry 5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>