force-app/main/default/objects/Quote/fields/INSTANDA_Quote_ID__c.field-meta.xml
<CustomField>
    <fullName>INSTANDA_Quote_ID__c</fullName>
    <externalId>true</externalId>
    <label>INSTANDA Quote ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>