force-app/main/default/objects/Quote/fields/INSTANDA_URL__c.field-meta.xml
<CustomField>
    <fullName>INSTANDA_URL__c</fullName>
    <description>URL link to INSTANDA Quote</description>
    <label>INSTANDA URL</label>
    <type>Url</type>
</CustomField>