force-app/main/default/objects/Quote/fields/isSynced__c.field-meta.xml
<CustomField>
    <fullName>isSynced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSynced</label>
    <type>Checkbox</type>
</CustomField>