force-app/main/default/objects/Quote/fields/Nuclear_Guidance__c.field-meta.xml
<CustomField>
    <fullName>Nuclear_Guidance__c</fullName>
    <label>Nuclear Guidance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>