force-app/main/default/objects/Quote/fields/Number_Of_Family_Admin__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Family_Admin__c</fullName>
    <label>Number Of Family Admin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>