force-app/main/default/objects/Quote/fields/Number_of_Members__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Members__c</fullName>
    <label>Number of Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>