force-app/main/default/objects/Quote/fields/Occupation_3__c.field-meta.xml
<CustomField>
    <fullName>Occupation_3__c</fullName>
    <label>Occupation 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>