force-app/main/default/objects/Quote/fields/Occupation_4__c.field-meta.xml
<CustomField>
    <fullName>Occupation_4__c</fullName>
    <label>Occupation 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>