force-app/main/default/objects/Quote/fields/Occupation_5__c.field-meta.xml
<CustomField>
    <fullName>Occupation_5__c</fullName>
    <label>Occupation 5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>