force-app/main/default/objects/Quote/fields/Policy_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Policy_End_Date__c</fullName>
    <label>Policy End Date</label>
    <type>DateTime</type>
</CustomField>