force-app/main/default/objects/Quote/fields/Policy_Number_of_Instalments__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number_of_Instalments__c</fullName>
    <label>Policy Number of Instalments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>