force-app/main/default/objects/Quote/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <description>Used in a flow to stamp the Opportunity Product Types</description>
    <label>Product Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_type</valueSetName>
    </valueSet>
</CustomField>