force-app/main/default/objects/Quote/fields/Professional_Body__c.field-meta.xml
<CustomField>
    <fullName>Professional_Body__c</fullName>
    <label>Professional Body</label>
    <length>255</length>
    <type>Text</type>
</CustomField>