force-app/main/default/objects/Quote/fields/Referral_Link__c.field-meta.xml
<CustomField>
    <fullName>Referral_Link__c</fullName>
    <label>Referral Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>