force-app/main/default/objects/Quote/fields/Status_Flag__c.field-meta.xml
<CustomField>
    <fullName>Status_Flag__c</fullName>
    <formula>IMAGE(

CASE(  Status ,

&quot;Policy - Live&quot;, &quot;/img/samples/flag_green.gif&quot;,

&quot;Quote Provided&quot;, &quot;/img/samples/flag_green.gif&quot;,

&quot;Quote Referred&quot;, &quot;/img/samples/flag_yellow.gif&quot;,

&quot;Quote Declined&quot;, &quot;/img/samples/flag_red.gif&quot;,

&quot;Closed Lost&quot;, &quot;/img/samples/flag_red.gif&quot;,

&quot;/s.gif&quot;),

&quot;Stage Flag&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>