force-app/main/default/objects/Quote/fields/USA_Canada_Work__c.field-meta.xml
<CustomField>
    <fullName>USA_Canada_Work__c</fullName>
    <label>USA Canada Work</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>