force-app/main/default/objects/Quote/fields/Where_did_You_hear_about_us__c.field-meta.xml
<CustomField>
    <fullName>Where_did_You_hear_about_us__c</fullName>
    <description>For Instanda API Mapping for WhereHeard</description>
    <label>Where did You hear about us</label>
    <length>255</length>
    <type>Text</type>
</CustomField>