force-app/main/default/objects/Quote/fields/Would_Like_Call_From_Ir35_Review_Partner__c.field-meta.xml
<CustomField>
    <fullName>Would_Like_Call_From_Ir35_Review_Partner__c</fullName>
    <label>Would Like Call From Ir35 Review Partner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>