force-app/main/default/objects/Quote/listViews/Open_opps.listView-meta.xml
<ListView>
    <fullName>Open_opps</fullName>
    <columns>QUOTE.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>QUOTE.ISSYNCING</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>QUOTE.SUBTOTAL</columns>
    <columns>QUOTE.TOTALPRICE</columns>
    <filterScope>Everything</filterScope>
    <label>Open opps</label>
    <language>en_US</language>
</ListView>